--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
   </head>
 
  <body>       
-
+    <header>
+        <img src="./Images/logo.png" alt="Logo"/>
+        <nav>
+            <ul>
+                <li>Accueil</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+        
+    </header>
 
 </body>
 
