--- a/index.html
+++ b/index.html
@@ -29,6 +29,42 @@
                 <h1>Agence de graphisme</h1>
             </div>
         </section>
+
+        <section id="presentation">
+            <p>
+                Mon petit graphisme est une agence de 
+                graphisme qui aide les entreprises à créer des visuels attractifs.
+            </p>
+            <section id="presentation-activities">
+                <article>
+                    <img src="Images/graphic-design.png" alt="Design d'un ordinateur"/>
+                    <h2>GRAPHISME</h2>
+                    <p>Que vous ayez besoin de graphisme pour un site web, 
+                        des cartes de visite ou des affiches, nous réalisons des visuels dont vous serez fiers.
+                    </p>
+                </article>
+                <article>
+                    <img src="Images/strategie.png" alt="Design d'un tableau"/>
+                    <h2>STRATEGIE</h2>
+                    <p>Plutôt que de suggérer des graphismes à la mode, 
+                        nous prenons le temps de comprendre vos objectifs et nous nous adaptons à vos besoins.
+                    </p>
+                </article>
+                <article>
+                    <img src="Images/illustrations.png" alt="Design d'un dessinr"/>
+                    <h2>ILLUSTRATIONS</h2>
+                    <p>Nos graphistes vous proposerons des illustrations 100% originales.
+                    </p>
+                </article>
+            </section>
+
+            <blockquote>
+                <p>"Mon petit graphisme est une excellente agence de graphisme.
+                    Les graphistes sont à l'écoute des besoins et m'ont permis de renouveler
+                    complètement la carte de mon restaurant."
+                </p> 
+                <cite>Amandine, restauratrice</cite></blockquote>
+        </section>
     </main>
 
 </body>
