--- a/index.html
+++ b/index.html
@@ -67,6 +67,36 @@
         </section>
     </main>
 
+    <footer>
+        <p class="slogan">Mon petit graphisme - Agence de graphisme basée à Paris</p>
+        
+        <div id="informations">
+            <div>
+                <h3>Accès rapide</h3>
+                <ul>
+                    <li>Accueil</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div>
+                <h3>A propos</h3>
+                <ul>
+                    <li>Données personnelles</li>
+                    <li>Mentions légales</li>
+                    <li>Cookies</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Coordonnées</h3>
+                <ul class="coordonnée">
+                <li>10 Quai de la Charente</li>
+                <li>75019</li>
+                <li>01 23 45 67 89</li>
+            </ul>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
